# numerical

./: CMakeLists.txt  linalg.hpp  main.cpp  matrix_type.hpp  solver.hpp  tests.cpp
.github/workflows/: c-cpp.yml
src/: linalg.hpp  matrix_type.hpp  utils.hpp
